--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@express/twilio-verify",
+  "name": "@manic/express-twilio-verify",
   "version": "1.0.0",
   "description": "Plug-and-play Twilio Verify implementation for Express.",
   "main": "index.js",
