--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@manic/express-twilio-verify",
   "version": "1.0.0",
+  "private": false,
   "description": "Plug-and-play Twilio Verify implementation for Express.",
   "main": "index.js",
   "scripts": {
